refact: organize some components and preview players on game screen

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -41,7 +41,8 @@
         "noSvgWithoutTitle": "off"
       },
       "style": {
-        "noMagicNumbers": "off"
+        "noMagicNumbers": "off",
+        "noNonNullAssertion": "off"
       },
       "suspicious": {
         "noEmptyBlockStatements": "off"
